--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1059,6 +1059,15 @@ main
                                 {
                                     padding-top: 11px;
                                     padding-bottom: 9px;
+
+                                    .item_icon,span
+                                    {
+                                        color:$black_4a;
+                                    }
+                                    .item_icon
+                                    {
+                                        background-image: img_url('black_boutique.png');
+                                    }
                                 }
                             }
                         }
@@ -1076,9 +1085,19 @@ main
     {
         section
         {
+            &.section_photo
+            {
+                .boutique_photo
+                {
+                    width: 100%;
+                    height: 378px;
+                    background: img_url('boutique_large.png') no-repeat center;
+                    background-size: cover;
+                }
+            }
+
             &.section_1
             {
-                border-top: 1px solid $grey_97;
                 padding-top: 38px;
 
                 h2
