--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,6 +16,8 @@ $gold_d9: #d9811f;
 $gold_ce: #CEAF7C;
 
 $grey_9b: #9b9b9b;
+$grey_9c: #9C9C9C;
+$grey_99: #999595;
 $grey_f0: #f0f0f0;
 $blue_00: #008CDD;
 $grey_fa: #fafafa;
