feat: responsiveness on settings menu

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -527,7 +527,7 @@ header
 
                     &.active
                     {
-                        a
+                        > a
                         {
                             font-weight: 700;
                         }
