--- a/scss/_owner_page.scss
+++ b/scss/_owner_page.scss
@@ -1299,26 +1299,90 @@ main
                             width: 300px;
                             position: relative;
 
-                            select + span
+                            .country_dropdown
                             {
-                                background: transparent;
-                                color: $grey_77;
-                                @include font-details(14px, 'OpenSans', 400);
-                                line-height: 1.2;
-                                width: 300px;
-                                display: block;
-                                border: 1px solid $grey_97;
-                                margin-top: 3px;
-                                @include border-radius(0);
-                                padding: 22px 12px 20px 52px;
-
-                                &:focus
+                                &.ui.dropdown
                                 {
-                                    outline: 0 !important;
+                                    border: 1px solid $grey_97;
+                                    background: transparent;
+                                    width: 300px;
+                                    min-width: 0;
+                                    min-height: 0;
+                                    position: relative;
+                                    display: inline-block;
+                                    vertical-align: top;
+                                    @include border-radius(0);
+                                    padding: 0;
+
+                                    .icon
+                                    {
+                                        color: $black_28;
+                                        font-size: 14px;
+                                        height: 11px;
+                                        display: inline-block;
+                                        margin: 0;
+                                        border: none;
+                                        position: absolute;
+                                        top: 12px;
+                                        right: 4px;
+                                    }
+
+                                    .text, .default
+                                    {
+                                        padding: 23px 12px 21px 52px;
+                                        display: block;
+                                        color: $grey_77;
+                                        @include font-details(14px, 'OpenSans', 400);
+                                        max-width: 260px;
+                                        min-width: 0;
+                                        white-space: nowrap;
+                                        overflow: hidden;
+                                        text-overflow: ellipsis;
+
+                                    }
+
+                                    .menu
+                                    {
+                                        @include border-radius(0);
+                                        @include box-shadow(none);
+                                        border: 1px solid $grey_97;
+                                        max-height: 300px;
+                                        overflow-y: auto;
+                                        border-top-width: 1px!important;
+
+                                        > .item
+                                        {
+                                            border-top-color: transparent;
+                                            padding: 12px 0 10px 12px!important;
+                                            color: $grey_77;
+                                            @include font-details(14px, 'OpenSans', 400);
+
+                                            &:hover, &:focus
+                                            {
+                                                background: transparent;
+                                            }
+                                            &.selected
+                                            {
+                                                background: transparent;
+                                            }
+                                        }
+                                    }
+
+                                    &.active
+                                    {
+                                        border: 1px solid $grey_97;
+                                        .menu
+                                        {
+                                            outline: 0 !important;
+                                            border-color:$grey_97;
+                                            @include box-shadow(none);
+                                        }
+                                    }
                                 }
                             }
 
-                            .icon
+
+                            .icons
                             {
                                 position: absolute;
                                 width: 18px;
@@ -1868,6 +1932,8 @@ main
                                 .menu
                                 {
                                     width: 140px;
+                                    max-height: 200px;
+                                    overflow-y: auto;
                                     @include border-radius(0);
                                     @include box-shadow(none);
                                     border: 1px solid $grey_97;
@@ -4244,26 +4310,89 @@ main
                                         width: 300px;
                                         position: relative;
 
-                                        select + span
+                                        .country_dropdown
                                         {
-                                            background: transparent;
-                                            color: $grey_77;
-                                            @include font-details(14px, 'OpenSans', 400);
-                                            line-height: 1.2;
-                                            width: 300px;
-                                            display: block;
-                                            border: 1px solid $grey_97;
-                                            margin-top: 3px;
-                                            @include border-radius(0);
-                                            padding: 22px 12px 20px 52px;
-
-                                            &:focus
+                                            &.ui.dropdown
                                             {
-                                                outline: 0 !important;
+                                                border: 1px solid $grey_97;
+                                                background: transparent;
+                                                width: 300px;
+                                                min-width: 0;
+                                                min-height: 0;
+                                                position: relative;
+                                                display: inline-block;
+                                                vertical-align: top;
+                                                @include border-radius(0);
+                                                padding: 0;
+
+                                                .icon
+                                                {
+                                                    color: $black_28;
+                                                    font-size: 14px;
+                                                    height: 11px;
+                                                    display: inline-block;
+                                                    margin: 0;
+                                                    border: none;
+                                                    position: absolute;
+                                                    top: 12px;
+                                                    right: 4px;
+                                                }
+
+                                                .text, .default
+                                                {
+                                                    padding: 23px 12px 21px 52px;
+                                                    display: block;
+                                                    color: $grey_77;
+                                                    @include font-details(14px, 'OpenSans', 400);
+                                                    max-width: 260px;
+                                                    min-width: 0;
+                                                    white-space: nowrap;
+                                                    overflow: hidden;
+                                                    text-overflow: ellipsis;
+
+                                                }
+
+                                                .menu
+                                                {
+                                                    @include border-radius(0);
+                                                    @include box-shadow(none);
+                                                    border: 1px solid $grey_97;
+                                                    max-height: 300px;
+                                                    overflow-y: auto;
+                                                    border-top-width: 1px!important;
+
+                                                    > .item
+                                                    {
+                                                        border-top-color: transparent;
+                                                        padding: 12px 0 10px 12px!important;
+                                                        color: $grey_77;
+                                                        @include font-details(14px, 'OpenSans', 400);
+
+                                                        &:hover, &:focus
+                                                        {
+                                                            background: transparent;
+                                                        }
+                                                        &.selected
+                                                        {
+                                                            background: transparent;
+                                                        }
+                                                    }
+                                                }
+
+                                                &.active
+                                                {
+                                                    border: 1px solid $grey_97;
+                                                    .menu
+                                                    {
+                                                        outline: 0 !important;
+                                                        border-color:$grey_97;
+                                                        @include box-shadow(none);
+                                                    }
+                                                }
                                             }
                                         }
 
-                                        .icon
+                                        .icons
                                         {
                                             position: absolute;
                                             width: 18px;
@@ -4535,5 +4664,8 @@ main
 {
     background-image: url("../libs/jquery_ui/images/ui-icons_777777_256x240.png");
 }
+
+
+
 
 
