--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,9 @@
 //Utilities import
 @import "../libs/jquery_ui/jquery-ui.min.css";
+@import "../libs/date_picker/picker.css";
 @import "../libs/bootstrap/css/bootstrap.min.css";
+@import "../libs/semantic/css/dropdown.min.css";
+@import "../libs/semantic/css/transition.min.css";
 @import "variables";
 @import "utils";
 
