fix: bug fixing

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -35,7 +35,7 @@ $grey_ec: #ececec;
 $grey_f7: #f7f7f7;
 $grey_e3: #e3e3e3;
 $grey_f3: #F3F3F3;
-
+$grey_ef:#EFF7F8;
 $grey_70: #706A6B;
 $grey_85: #858585;
 $grey_cf: #cfcfcf;
